--- a/egm_dde.ipynb
+++ b/egm_dde.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "# This is the implementation of the Energy-based Genertive Models, which uses DDEs to compute the KL-divergence loss's gradients\n",
     "from tensorflow import keras\n",
+    "import tensorflow as tf\n",
     "\n",
     "# We use DDEs for density estimation\n",
     "# the EGMs can use any type of density (energy)-based models, even unnormalized estimators\n",
@@ -59,7 +60,7 @@
     "        \"\"\" Calculates the reverse KL loss.\n",
     "        \"\"\"\n",
     "        \n",
-    "        n_fake = self.gaussian_noise_layer(fake)\n",
+    "        n_fake, _ = self.gaussian_noise_layer(fake)\n",
     "        \n",
     "        log_prob1_fake, _ = self.dde_real(n_fake)\n",
     "        log_prob2_fake, _ = self.dde_fake(n_fake)\n",
@@ -644,13 +645,7 @@
       "4/4 [==============================] - 0s 27ms/step - loss_dde_real: 78.6962 - loss_dde_fake: 36.1489 - gen_loss: 15020.9941\n",
       "Epoch 59/1000\n",
       "4/4 [==============================] - 0s 23ms/step - loss_dde_real: 78.6368 - loss_dde_fake: 35.4099 - gen_loss: 14229.5764\n",
-      "Epoch 60/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 60/1000\n",
       "4/4 [==============================] - 0s 23ms/step - loss_dde_real: 80.1639 - loss_dde_fake: 36.4012 - gen_loss: 15276.5498\n",
       "Epoch 61/1000\n",
       "4/4 [==============================] - 0s 27ms/step - loss_dde_real: 78.9754 - loss_dde_fake: 36.7214 - gen_loss: 14994.2742\n",
@@ -891,13 +886,7 @@
       "4/4 [==============================] - 0s 28ms/step - loss_dde_real: 79.2455 - loss_dde_fake: 63.4492 - gen_loss: 16623.3535\n",
       "Epoch 158/1000\n",
       "4/4 [==============================] - 0s 28ms/step - loss_dde_real: 77.1218 - loss_dde_fake: 65.3786 - gen_loss: 17067.7176\n",
-      "Epoch 159/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 159/1000\n",
       "4/4 [==============================] - 0s 28ms/step - loss_dde_real: 79.4040 - loss_dde_fake: 64.3637 - gen_loss: 15375.8965\n",
       "Epoch 160/1000\n",
       "4/4 [==============================] - 0s 30ms/step - loss_dde_real: 77.8299 - loss_dde_fake: 64.8471 - gen_loss: 16611.5691\n",
@@ -1140,13 +1129,7 @@
       "4/4 [==============================] - 0s 31ms/step - loss_dde_real: 79.0055 - loss_dde_fake: 76.7576 - gen_loss: 19428.1672\n",
       "Epoch 258/1000\n",
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 77.7789 - loss_dde_fake: 75.7141 - gen_loss: 17810.6406\n",
-      "Epoch 259/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 259/1000\n",
       "4/4 [==============================] - 0s 28ms/step - loss_dde_real: 78.5504 - loss_dde_fake: 76.4692 - gen_loss: 17969.3891\n",
       "Epoch 260/1000\n",
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 78.9157 - loss_dde_fake: 77.4371 - gen_loss: 17703.3801\n",
@@ -1389,13 +1372,7 @@
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 80.4467 - loss_dde_fake: 84.6889 - gen_loss: 20054.1219\n",
       "Epoch 358/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 80.7200 - loss_dde_fake: 84.6853 - gen_loss: 20804.9242\n",
-      "Epoch 359/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 359/1000\n",
       "4/4 [==============================] - 0s 31ms/step - loss_dde_real: 78.4342 - loss_dde_fake: 84.2750 - gen_loss: 21475.1848\n",
       "Epoch 360/1000\n",
       "4/4 [==============================] - 0s 31ms/step - loss_dde_real: 77.6995 - loss_dde_fake: 83.0967 - gen_loss: 20671.2805\n",
@@ -1638,13 +1615,7 @@
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 78.6218 - loss_dde_fake: 87.5131 - gen_loss: 20550.8410\n",
       "Epoch 458/1000\n",
       "4/4 [==============================] - 0s 30ms/step - loss_dde_real: 79.1954 - loss_dde_fake: 86.6951 - gen_loss: 20056.6371\n",
-      "Epoch 459/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 459/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 78.5094 - loss_dde_fake: 88.0499 - gen_loss: 20359.3793\n",
       "Epoch 460/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 77.3612 - loss_dde_fake: 87.6530 - gen_loss: 20927.5379\n",
@@ -1887,13 +1858,7 @@
       "4/4 [==============================] - 0s 31ms/step - loss_dde_real: 78.3154 - loss_dde_fake: 88.6943 - gen_loss: 17240.7162\n",
       "Epoch 558/1000\n",
       "4/4 [==============================] - 0s 30ms/step - loss_dde_real: 78.8602 - loss_dde_fake: 90.0542 - gen_loss: 16880.0232\n",
-      "Epoch 559/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 559/1000\n",
       "4/4 [==============================] - 0s 34ms/step - loss_dde_real: 77.3057 - loss_dde_fake: 87.3996 - gen_loss: 17006.0566\n",
       "Epoch 560/1000\n",
       "4/4 [==============================] - 0s 30ms/step - loss_dde_real: 77.6235 - loss_dde_fake: 89.2968 - gen_loss: 16985.4770\n",
@@ -2136,13 +2101,7 @@
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 78.7531 - loss_dde_fake: 91.0611 - gen_loss: 16565.8738\n",
       "Epoch 658/1000\n",
       "4/4 [==============================] - 0s 36ms/step - loss_dde_real: 78.9333 - loss_dde_fake: 91.6279 - gen_loss: 15448.3508\n",
-      "Epoch 659/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 659/1000\n",
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 77.8627 - loss_dde_fake: 91.0245 - gen_loss: 15707.0377\n",
       "Epoch 660/1000\n",
       "4/4 [==============================] - 0s 28ms/step - loss_dde_real: 77.9388 - loss_dde_fake: 90.8198 - gen_loss: 16026.3729\n",
@@ -2385,13 +2344,7 @@
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 78.0356 - loss_dde_fake: 94.3946 - gen_loss: 16927.1625\n",
       "Epoch 758/1000\n",
       "4/4 [==============================] - 0s 36ms/step - loss_dde_real: 78.7053 - loss_dde_fake: 93.9157 - gen_loss: 16828.3424\n",
-      "Epoch 759/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 759/1000\n",
       "4/4 [==============================] - 0s 34ms/step - loss_dde_real: 78.3336 - loss_dde_fake: 93.3115 - gen_loss: 17641.7465\n",
       "Epoch 760/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 79.0582 - loss_dde_fake: 94.2884 - gen_loss: 17537.3480\n",
@@ -2634,13 +2587,7 @@
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 76.9653 - loss_dde_fake: 94.9479 - gen_loss: 14378.6926\n",
       "Epoch 858/1000\n",
       "4/4 [==============================] - 0s 34ms/step - loss_dde_real: 79.0417 - loss_dde_fake: 95.2118 - gen_loss: 15602.4951\n",
-      "Epoch 859/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 859/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 79.9374 - loss_dde_fake: 94.5038 - gen_loss: 14867.6279\n",
       "Epoch 860/1000\n",
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 75.7376 - loss_dde_fake: 93.5360 - gen_loss: 16060.5051\n",
@@ -2881,13 +2828,7 @@
       "4/4 [==============================] - 0s 35ms/step - loss_dde_real: 77.6359 - loss_dde_fake: 94.3720 - gen_loss: 17484.4211\n",
       "Epoch 957/1000\n",
       "4/4 [==============================] - 0s 32ms/step - loss_dde_real: 79.8467 - loss_dde_fake: 94.5910 - gen_loss: 16247.9439\n",
-      "Epoch 958/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 958/1000\n",
       "4/4 [==============================] - 0s 33ms/step - loss_dde_real: 78.9400 - loss_dde_fake: 95.6415 - gen_loss: 16257.2645\n",
       "Epoch 959/1000\n",
       "4/4 [==============================] - 0s 35ms/step - loss_dde_real: 77.0895 - loss_dde_fake: 96.5138 - gen_loss: 16964.2393\n",
@@ -3047,7 +2988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3061,7 +3002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
